compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__assignments__assert.snap
---
source: compiler-core/src/nix/tests/assignments.rs
expression: "fn go(x) { let assert 1 = x }"
---
let
  go =
    x: if x != 1 then builtins.throw "Assignment pattern did not match" else x;
in {}
