compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__assignments__assert1.snap
---
source: compiler-core/src/nix/tests/assignments.rs
expression: "fn go(x) { let assert #(1, 2) = x }"
---
let
  go =
    x:
      if (builtins.elemAt x 0) != 1 || (builtins.elemAt x 1) != 2
      then builtins.throw "Assignment pattern did not match"
      else x;
in {}
