compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__assignments__constant_assignments.snap
---
source: compiler-core/src/nix/tests/assignments.rs
expression: "\nconst a = True\n\nfn go() {\n  a\n  let a = 10\n  a + 20\n}\n\nfn second() {\n  let a = 10\n  a + 20\n}\n"
---
let
  second = {}: let a'1 = 10; in a'1 + 20;
  
  a = true;
  
  go = {}: let _'0 = a; a'1 = 10; in a'1 + 20;
in {}
