compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__assignments__correct_variable_renaming_in_assigned_functions.snap
---
source: compiler-core/src/nix/tests/assignments.rs
expression: "\npub fn debug(x) {\n  let x = x\n  fn(x) {\n    x + 1\n    let x = x\n    let x = x\n    x\n  }\n}\n"
---
let
  debug = x: let x'1 = x; in x: let _''0 = x + 1; x'1 = x; x'2 = x'1; in x'2;
in { inherit debug; }
