compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__assignments__let_assert_string_prefix.snap
---
source: compiler-core/src/nix/tests/assignments.rs
expression: "\npub fn main(x) {\n  let assert \"Game \" <> id = x\n  id\n}\n"
---
let
  main =
    x:
      let
        _assert' =
          if
            !("Game " == (builtins.substring 0 (builtins.stringLength "Game ") x))
          then builtins.throw "Assignment pattern did not match"
          else null;
        id = builtins.seq _assert' (builtins.substring 5 (-1) x);
      in id;
in { inherit main; }
