compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__assignments__rebound_function_and_arg.snap
---
source: compiler-core/src/nix/tests/assignments.rs
expression: "pub fn x() { \n  Nil\n}\n        \npub fn main(x) {\n  let x = False\n  x\n}\n"
---
let x = null; main = x: let x'1 = false; in x'1; in { inherit x main; }
