compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__assignments__returning_literal_subject.snap
---
source: compiler-core/src/nix/tests/assignments.rs
expression: "fn go(x) { let assert 1 = x + 1 }"
---
let
  go =
    x:
      let
        _pat' = (x + 1);
      in
        if _pat' != 1
        then builtins.throw "Assignment pattern did not match"
        else _pat';
in {}
