compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__assignments__tuple_matching.snap
---
source: compiler-core/src/nix/tests/assignments.rs
expression: "\nfn go(x) {\n  let assert #(1, 2) = x\n}\n"
---
let
  go =
    x:
      if x._0 != 1 || x._1 != 2
      then builtins.throw "Assignment pattern did not match"
      else x;
in {}
